[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {"version" = "*", features = ["serde-serialize"] } # replace * by the latest version of the crate.
rand = "*" # replace * by the latest version of the crate.
toml = "*"
serde = "*"
serde_derive = "*"
dipstick = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "diff_drive_benchmark"
harness = false